// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword should match snapshot 1`] = `
<div>
  <div
    className="undefined undefined"
  >
    <Component
      isCentered={true}
    >
      Forgot password
    </Component>
    <p
      className="pb-8"
    >
      Welcome to Reapit Foundations
    </p>
    <EnhanceForgotPasswordForm
      submitEmail={[MockFunction]}
    />
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;

exports[`ForgotPassword should match snapshot 2`] = `
<div>
  <div
    className="undefined undefined"
  >
    <Component
      isCentered={true}
    >
      Forgot password
    </Component>
    <p
      className="pb-8"
    >
      Welcome to Reapit Foundations
    </p>
    <Component />
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;
